kubernetes/app/budget-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: budget-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: budget
  template:
    metadata:
      labels:
        app: budget
    spec:
      containers:
      - name: budget
        image: ansalsajan/myapp:v1
        ports:
        - containerPort: 3000
