kubernetes/app/budget-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: budget
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
