kubernetes/app/budget-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: budget-ingress
  annotations:
    budget.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 3000
